# fouchger_homelab

./: .gitignore  Makefile  README.md  bootstrap.sh  executable.list  fhl-menu  homelab  homelab.sh  install.sh  pyproject.toml  requirements.txt  test.sh  tt.sh  ttt.sh
archieve/: bootstrap.sh  homelab.sh
commands/: ansible_apply.sh  apps_install.sh  apps_uninstall.sh  cleanup.sh  diagnostics.sh  menu.sh  profiles.sh  proxmox_access.sh  selections.sh  templates.sh  terraform_apply.sh
commands/menu/: admin_node.sh  menu.sh  proxmox_platform.sh  workloads_servers.sh
config/: apps.yml  executables.list  homelab.conf.defaults  profiles.yml  ui.env  ui.yml
docs/: README.md  design document
docs v1/: Fouchger_Homelab_Developer_Manual.docx  Fouchger_Homelab_Runbook.docx  Fouchger_Homelab_User_Manual.docx
docs v1/engineering/: module-and-paths-policy.md
docs/ADRs/: 0001-architecture-and-state-contract.md  0002-dry-run-and-replay.md  0003-validation-gates.md
docs/developers/: README.md  architecture.md  contributing.md  development-plan.md  development-standards.md  extending.md  runtime.md  sprint-plan.md  validation-and-errors.md
docs/examples/: latest.env.example  summary.json.example  templates-manifest.json.example  terraform-outputs.json.example
docs/platform/: kubernetes-talos.md
docs/profiles/: admin-node.md  applications-catalogue.md  install-uninstall-model.md  overview.md  role-catalogue.md  workload-baseline.md
docs/specs/: 00-index.md  01-functional-overview.md  02-config-and-state-schema.md  03-ui-and-navigation-spec.md  04-bootstrap-spec.md  05-menu-and-command-contracts.md  06-apps-pipeline-spec.md  07-proxmox-access-spec.md  08-templates-spec.md  09-terraform-spec.md  10-ansible-spec.md  11-diagnostics-and-cleanup-spec.md  12-dry-run-and-replay-spec.md  13-logging-observability-spec.md  14-validation-gates-spec.md  15-security-and-secrets-spec.md  16-acceptance-tests.md  28-definition-of-done.md  29-version-pinning-policy.md  30-app-failure-policy.md
docs/tools/: generate_manuals.py
lib/: actions.sh  command_runner.sh  common.sh  config.sh  core.sh  env.sh  features.sh  logger.sh  logging.sh  menu.sh  modules.sh  paths.sh  pkg.sh  run.sh  runtime.sh  secrets.sh  state.sh  ui.sh  ui_dialog.sh  validation.sh  yaml.sh
lib/menu/: actions.sh  features.sh  menu.sh  ui.sh
proxmox/: download_templates.sh  setup_access.sh
scripts/: make-executable.sh
scripts/app_manager/: app_manager.sh  (+1 more)
tests/: test_repo_root.sh
tools/fhl_menu/: README.md  pyproject.toml  requirements.txt
tools/fhl_menu/src/fhl_menu/: __init__.py  __main__.py  app.py  bootstrap.py  config.py  constants.py  doctor.py  logging_setup.py  paths.py  ui_cli.py  ui_textual.py  util.py
(+173 files in other folders)
